HelloUltraviolet/Fixtures/RejectedSource/Procedures/MethodLookupAmbiguousDefault/Expected.uv
//! Expected diagnostic metadata for the MethodLookupAmbiguousDefault rejected-source specimen.

expectedDiagnostic("", "rule.15.LookupMethod-Ambig")
